# hands-off-my-vpn

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test_apps.py
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  fd_tracker.h  homvpn_native.cpp  sanitizer.cpp  sanitizer.h
app/src/main/kotlin/dev/lok1s/handoffmyvpn/: HookEntry.kt  LogReceiver.kt
app/src/main/kotlin/dev/lok1s/handoffmyvpn/hook/: ConnectivityManagerHook.kt  DetectionLog.kt  IfconfigDetectorHook.kt  LinkPropertiesHook.kt  LogDispatcher.kt  NativeLoader.kt  NetworkCapabilitiesHook.kt  NetworkInterfaceHook.kt  OsInterfaceHook.kt  ProxyHook.kt  SystemPropertyHook.kt
app/src/main/kotlin/dev/lok1s/handoffmyvpn/ui/: AppsScreen.kt  LogScreen.kt  MainActivity.kt  StatusScreen.kt
app/src/main/kotlin/dev/lok1s/handoffmyvpn/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ru/: strings.xml
gradle/: libs.versions.toml
